# Moneky

./: .gitignore  README.md  pyproject.toml
VITRA/: .gitignore  readme.md
VITRA/scripts/: eval_llava_ov2_memorize.py  eval_llava_ov2_overfit.py  exec_monkey_cyt_memorize.sh  exec_monkey_cyt_memorize_viz.sh  exec_monkey_cyt_overfit.sh  exec_monkey_cyt_overfit_full.sh  inference_llava_ov2.py  launch_monkey_cyt_overfit.py  run_llava_ov2_memorize.sh  run_llava_ov2_memorize_viz.sh  run_llava_ov2_overfit.sh  run_llava_ov2_overfit_full_qz.sh  run_llava_ov2_overfit_pipeline.sh  run_llava_ov2_overfit_qz.sh  train_llava_ov2_memorize.py  train_llava_ov2_overfit.py  viz_llava_ov2_dataset_episode.py
VITRA/vitra/configs/: human_llava_ov2_memorize.json  human_llava_ov2_overfit.json  human_llava_ov2_overfit_full.json
VITRA/vitra/datasets/: human_dataset.py  llava_ov2_collator.py  llava_ov2_dataset.py  llava_ov2_video.py
VITRA/vitra/models/: vlm_builder.py
data/: episode_frame_index.npz  generate_vitra_eps_npz.py  generate_vitra_eps_npz_split_by_minima.py  worldmodelv1_angle_statistics.json
data/episodic_annotations/: WorldModelV1_gpu0_task000008_ep_000000.npy
datasets/: WRIST_SFT_IO.md  __init__.py  epoch_reader.py  wrist_video_sft.py
llava/: __init__.py
llava/eval/: eval_wrist.py  eval_wrist_overfit.py  visualize_wrist_infer.py
llava/train/: train_wrist.py  train_wrist_overfit.py
llava/wrist/: __init__.py  collator.py  constants.py  metrics.py  model.py  normalize.py  overfit_model.py  video_inputs.py  viz.py
scripts/: activate_env.sh  visualize_sft_io.py  visualize_wrist_epoch.py
scripts/archived/: entry_cmd.sh
scripts/train/: wrist_overfit.sh  wrist_overfit_quick.sh  wrist_sft.sh
(+6 files in other folders)
